--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "dependencies": {
     "onsenui": "2.10.4",
     "react": "16.4.1",
+    "react-app-rewire-workbox": "2.0.1",
+    "react-app-rewired": "1.5.2",
     "react-dom": "16.4.1",
     "react-onsenui": "1.11.1",
     "react-redux": "5.0.7",
     "react-scripts": "1.1.4",
     "redux": "4.0.0",
-    "serve": "9.3.0"
+    "serve": "^9.3.0",
+    "workbox-webpack-plugin": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "dev": "react-app-rewired start",
+    "prod": "npm run build && npm start",
+    "start": "serve ./build -s -p ${PORT:-4000}",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
