--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,10 @@
 {
   "short_name": "PWA base",
   "name": "PWA base - v.0.1.alpha",
+  "description": "Progressive Web App - Base",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "logo512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -12,5 +13,9 @@
   "scope": "/",
   "display": "standalone",
   "theme_color": "#1e88e5",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "related_applications": [{
+    "platform": "play",
+    "url": "https://play.google.com/store/apps/details?id=com.bappzi.lectorqr"
+  }]
 }
